Order styling fixes - border update to match design, fixing spacing in editor to match preview

--- a/components/corespring/ordering/src/client/styles.less
+++ b/components/corespring/ordering/src/client/styles.less
@@ -31,7 +31,7 @@
       .choices-holder {
         .choices-inner-holder {
           border-radius: 4px;
-          border: 1px solid #000000;
+          border: 2px solid #9B9B9B;
           background-color: #efefef;
         }
         .choice {
@@ -50,6 +50,7 @@
       border-radius: 4px;
       border: 1px solid #979797;
       background-color: #d8d8d8 !important;
+      font-size: 38px;
 
       &:hover {
         cursor: auto;
@@ -154,7 +155,7 @@
     width: 100%;
 
     .main-row {
-      width: 100%;
+      max-width: 100%;
       display: table;
       margin-top: 5px;
       margin-bottom: 10px;
@@ -163,6 +164,7 @@
     .choice-area {
       display: table-cell;
       vertical-align: top;
+      padding-right: 20px;
 
       .choices {
         padding-top: 0px;
@@ -172,6 +174,10 @@
 
         .choice {
           width: 150px;
+
+          &:hover{
+            cursor: pointer;
+          }
         }
       }
     }
@@ -180,6 +186,10 @@
       display: table-cell;
       .choice {
         width: 150px;
+
+        &:hover{
+          cursor: pointer;
+        }
       }
 
       .answer-area-label {
